--- a/compiler/ink_compiler.csproj
+++ b/compiler/ink_compiler.csproj
@@ -25,6 +25,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="InkStringConversionExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ParsedHierarchy\AuthorWarning.cs" />
     <Compile Include="ParsedHierarchy\Choice.cs" />
